Prevent page from jumping when incomplete warning is toggled This has the nice side effect of making the space between sections on the pretest and feedback pages less awkwardly large

--- a/frontend/src/components/structure.module.scss
+++ b/frontend/src/components/structure.module.scss
@@ -40,7 +40,7 @@
 }
 
 .section {
-  margin-top: 10rem;
+  margin-top: 6rem;
 
   &.sectionFirst {
     margin-top: 0;
